# sqlalchemy-cli

./: .gitignore  pyproject.toml  sqlalchemy-cli.py  test-completers.py
sqlalchemy_cli/: completers.py
tests/: test_sqlalchemy_cli.py
