[tool.poetry]
name = "sqlalchemy_cli"
version = "0.1.0"
description = ""
authors = ["Kobi <harold.rockata@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
SQLAlchemy = ">=1.2.0,<=1.4.27"
pytz = "^2022.2.1"
prompt-toolkit = "^3.0.30"
Pygments = "^2.13.0"
sqlalchemy-bigquery = "^1.4.4"
tabulate = "^0.8.10"
sqlparse = "^0.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.4.0"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
